--- a/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
+++ b/src/data/levels/05b_PPU/11_PPUData - Delayed reads/chat/en.yml
@@ -13,7 +13,7 @@ delay:
   messages:
   - simple, when a <read> is requested, you read into a buffer, but then you return the <previous value> of that buffer
   - |-
-    📚  implement these methods in `PPUData`:
+    📚  implement these methods in 📦  `PPUData`:
     **onLoad**:
       **->** initializes ```javascript this.buffer = 0```
     **onRead()**:
