--- a/src/data/levels/05b_PPU/22_Masking/chat/en.yml
+++ b/src/data/levels/05b_PPU/22_Masking/chat/en.yml
@@ -19,7 +19,7 @@ why:
 
 lets:
   messages:
-  - 📚  in `PPUMask`, implement the `onLoad()` method, using `addField(...)` to map the mentioned bits
+  - 📚  in 🎭  `PPUMask`, implement the `onLoad()` method, using `addField(...)` to map the mentioned bits
   - |-
     use these names:
       `showBackgroundInFirst8Pixels`
